ocaml/minocaml3/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : seq_expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | structure_item use_file_tail

  16  parse_core_type : core_type EOF

  17  parse_expression : seq_expr EOF

  18  parse_pattern : pattern EOF

  19  structure : seq_expr structure_tail
  20            | structure_tail

  21  structure_tail :
  22                 | SEMISEMI structure
  23                 | structure_item structure_tail

  24  structure_item : LET rec_flag let_bindings
  25                 | open_statement

  26  signature :
  27            | SEMISEMI signature
  28            | signature_item signature

  29  signature_item : VAL val_ident COLON core_type
  30                 | open_statement

  31  open_statement : OPEN mod_longident

  32  seq_expr : expr
  33           | expr SEMI
  34           | expr SEMI seq_expr

  35  labeled_simple_pattern : LABEL simple_pattern
  36                         | simple_pattern

  37  expr : simple_expr
  38       | simple_expr simple_labeled_expr_list
  39       | LET rec_flag let_bindings_no_attrs IN seq_expr
  40       | FUNCTION opt_bar match_cases
  41       | FUN labeled_simple_pattern fun_def
  42       | MATCH seq_expr WITH opt_bar match_cases
  43       | TRY seq_expr WITH opt_bar match_cases
  44       | expr_comma_list
  45       | constr_longident simple_expr
  46       | IF seq_expr THEN expr ELSE expr
  47       | IF seq_expr THEN expr
  48       | expr COLONCOLON expr
  49       | LPAREN COLONCOLON RPAREN LPAREN expr COMMA expr RPAREN
  50       | expr INFIXOP0 expr
  51       | expr INFIXOP1 expr
  52       | expr INFIXOP2 expr
  53       | expr INFIXOP3 expr
  54       | expr INFIXOP4 expr
  55       | expr PLUS expr
  56       | expr PLUSDOT expr
  57       | expr PLUSEQ expr
  58       | expr MINUS expr
  59       | expr MINUSDOT expr
  60       | expr STAR expr
  61       | expr PERCENT expr
  62       | expr EQUAL expr
  63       | expr LESS expr
  64       | expr GREATER expr
  65       | expr OR expr
  66       | expr BARBAR expr
  67       | expr AMPERSAND expr
  68       | expr AMPERAMPER expr
  69       | expr COLONEQUAL expr
  70       | subtractive expr
  71       | additive expr
  72       | simple_expr DOT label_longident LESSMINUS expr
  73       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
  74       | simple_expr DOT LBRACKET seq_expr RBRACKET LESSMINUS expr
  75       | simple_expr DOT LBRACE expr RBRACE LESSMINUS expr
  76       | label LESSMINUS expr
  77       | ASSERT simple_expr

  78  simple_expr : val_longident
  79              | constant
  80              | constr_longident
  81              | LPAREN seq_expr RPAREN
  82              | BEGIN seq_expr END
  83              | BEGIN END
  84              | LPAREN seq_expr type_constraint RPAREN
  85              | simple_expr DOT label_longident
  86              | mod_longident DOT LPAREN seq_expr RPAREN
  87              | simple_expr DOT LPAREN seq_expr RPAREN
  88              | simple_expr DOT LBRACKET seq_expr RBRACKET
  89              | simple_expr DOT LBRACE expr RBRACE
  90              | LBRACE record_expr RBRACE
  91              | mod_longident DOT LBRACE record_expr RBRACE
  92              | LBRACKET expr_semi_list opt_semi RBRACKET
  93              | mod_longident DOT LBRACKET expr_semi_list opt_semi RBRACKET
  94              | PREFIXOP simple_expr
  95              | BANG simple_expr

  96  simple_labeled_expr_list : labeled_simple_expr
  97                           | simple_labeled_expr_list labeled_simple_expr

  98  labeled_simple_expr : simple_expr
  99                      | label_expr

 100  label_expr : LABEL simple_expr
 101             | TILDE label_ident

 102  label_ident : LIDENT

 103  let_bindings : let_binding
 104               | let_bindings AND let_binding

 105  let_bindings_no_attrs : let_bindings

 106  let_binding : let_binding_

 107  let_binding_ : val_ident fun_binding
 108               | pattern EQUAL seq_expr
 109               | simple_pattern_not_ident COLON core_type EQUAL seq_expr

 110  fun_binding : strict_binding
 111              | type_constraint EQUAL seq_expr

 112  strict_binding : EQUAL seq_expr
 113                 | labeled_simple_pattern fun_binding

 114  match_cases : match_case
 115              | match_cases BAR match_case

 116  match_case : pattern MINUSGREATER seq_expr
 117             | pattern WHEN seq_expr MINUSGREATER seq_expr

 118  fun_def : MINUSGREATER seq_expr
 119          | labeled_simple_pattern fun_def

 120  expr_comma_list : expr_comma_list COMMA expr
 121                  | expr COMMA expr

 122  record_expr : simple_expr WITH lbl_expr_list
 123              | lbl_expr_list

 124  lbl_expr_list : lbl_expr
 125                | lbl_expr SEMI lbl_expr_list
 126                | lbl_expr SEMI

 127  lbl_expr : label_longident EQUAL expr
 128           | label_longident

 129  expr_semi_list : expr
 130                 | expr_semi_list SEMI expr

 131  type_constraint : COLON core_type
 132                  | COLON core_type COLONGREATER core_type
 133                  | COLONGREATER core_type

 134  pattern : simple_pattern
 135          | pattern AS val_ident
 136          | pattern_comma_list
 137          | constr_longident pattern
 138          | pattern COLONCOLON pattern
 139          | LPAREN COLONCOLON RPAREN LPAREN pattern COMMA pattern RPAREN
 140          | pattern BAR pattern
 141          | EXCEPTION pattern

 142  simple_pattern : val_ident
 143                 | simple_pattern_not_ident

 144  simple_pattern_not_ident : UNDERSCORE
 145                           | signed_constant
 146                           | signed_constant DOTDOT signed_constant
 147                           | constr_longident
 148                           | LBRACE lbl_pattern_list RBRACE
 149                           | LBRACKET pattern_semi_list opt_semi RBRACKET
 150                           | LPAREN pattern RPAREN
 151                           | LPAREN pattern COLON core_type RPAREN

 152  pattern_comma_list : pattern_comma_list COMMA pattern
 153                     | pattern COMMA pattern

 154  pattern_semi_list : pattern
 155                    | pattern_semi_list SEMI pattern

 156  lbl_pattern_list : lbl_pattern
 157                   | lbl_pattern SEMI
 158                   | lbl_pattern SEMI UNDERSCORE opt_semi
 159                   | lbl_pattern SEMI lbl_pattern_list

 160  lbl_pattern : label_longident EQUAL pattern
 161              | label_longident

 162  core_type : core_type2

 163  core_type2 : simple_core_type_or_tuple
 164             | LIDENT COLON core_type2 MINUSGREATER core_type2
 165             | core_type2 MINUSGREATER core_type2

 166  simple_core_type : simple_core_type2
 167                   | LPAREN core_type_comma_list RPAREN

 168  simple_core_type2 : UNDERSCORE
 169                    | type_longident
 170                    | simple_core_type2 type_longident
 171                    | LPAREN core_type_comma_list RPAREN type_longident

 172  simple_core_type_or_tuple : simple_core_type
 173                            | simple_core_type STAR core_type_list

 174  core_type_comma_list : core_type
 175                       | core_type_comma_list COMMA core_type

 176  core_type_list : simple_core_type
 177                 | core_type_list STAR simple_core_type

 178  label : LIDENT

 179  constant : INT
 180           | CHAR
 181           | STRING
 182           | FLOAT

 183  signed_constant : constant
 184                  | MINUS INT
 185                  | MINUS FLOAT
 186                  | PLUS INT
 187                  | PLUS FLOAT

 188  val_ident : LIDENT

 189  val_longident : val_ident
 190                | mod_longident DOT val_ident

 191  constr_longident : mod_longident
 192                   | LBRACKET RBRACKET
 193                   | LPAREN RPAREN
 194                   | FALSE
 195                   | TRUE

 196  label_longident : LIDENT
 197                  | mod_longident DOT LIDENT

 198  type_longident : LIDENT
 199                 | mod_ext_longident DOT LIDENT

 200  mod_longident : UIDENT
 201                | mod_longident DOT UIDENT

 202  mod_ext_longident : UIDENT
 203                    | mod_ext_longident DOT UIDENT
 204                    | mod_ext_longident LPAREN mod_ext_longident RPAREN

 205  rec_flag :
 206           | REC

 207  opt_bar :
 208          | BAR

 209  opt_semi :
 210           | SEMI

 211  subtractive : MINUS
 212              | MINUSDOT

 213  additive : PLUS
 214           | PLUSDOT

 215  %entry% : '\001' implementation
 216          | '\002' interface
 217          | '\003' toplevel_phrase
 218          | '\004' use_file
 219          | '\005' parse_core_type
 220          | '\006' parse_expression
 221          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (215)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 21
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	OPEN  shift 27
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	SEMISEMI  shift 31
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	EOF  reduce 21

	implementation  goto 36
	structure  goto 37
	seq_expr  goto 38
	structure_item  goto 39
	structure_tail  goto 40
	open_statement  goto 41
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 2
	%entry% : '\002' . interface  (216)
	signature : .  (26)

	OPEN  shift 27
	SEMISEMI  shift 53
	VAL  shift 54
	EOF  reduce 26

	interface  goto 55
	signature  goto 56
	open_statement  goto 57
	signature_item  goto 58


state 3
	%entry% : '\003' . toplevel_phrase  (217)
	top_structure_tail : .  (7)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 59
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 21
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	OPEN  shift 27
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	SEMISEMI  reduce 7

	toplevel_phrase  goto 60
	top_structure  goto 61
	seq_expr  goto 62
	top_structure_tail  goto 63
	structure_item  goto 64
	open_statement  goto 41
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 4
	%entry% : '\004' . use_file  (218)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	EOF  shift 65
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 21
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	OPEN  shift 27
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	SEMISEMI  shift 66
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	use_file  goto 67
	seq_expr  goto 68
	structure_item  goto 69
	use_file_tail  goto 70
	open_statement  goto 41
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 5
	%entry% : '\005' . parse_core_type  (219)

	LIDENT  shift 71
	LPAREN  shift 72
	UIDENT  shift 73
	UNDERSCORE  shift 74
	.  error

	parse_core_type  goto 75
	core_type  goto 76
	core_type2  goto 77
	simple_core_type_or_tuple  goto 78
	simple_core_type  goto 79
	simple_core_type2  goto 80
	type_longident  goto 81
	mod_ext_longident  goto 82


state 6
	%entry% : '\006' . parse_expression  (220)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	parse_expression  goto 84
	seq_expr  goto 85
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 7
	%entry% : '\007' . parse_pattern  (221)

	CHAR  shift 12
	EXCEPTION  shift 86
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LBRACE  shift 87
	LBRACKET  shift 88
	LIDENT  shift 89
	LPAREN  shift 90
	MINUS  shift 91
	PLUS  shift 92
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	UNDERSCORE  shift 93
	.  error

	parse_pattern  goto 94
	pattern  goto 95
	val_ident  goto 96
	mod_longident  goto 97
	simple_pattern  goto 98
	constr_longident  goto 99
	constant  goto 100
	simple_pattern_not_ident  goto 101
	pattern_comma_list  goto 102
	signed_constant  goto 103


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	expr : ASSERT . simple_expr  (77)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LIDENT  shift 89
	LPAREN  shift 104
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	.  error

	val_ident  goto 42
	mod_longident  goto 43
	simple_expr  goto 105
	constr_longident  goto 106
	val_longident  goto 51
	constant  goto 52


state 10
	simple_expr : BANG . simple_expr  (95)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LIDENT  shift 89
	LPAREN  shift 104
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	.  error

	val_ident  goto 42
	mod_longident  goto 43
	simple_expr  goto 107
	constr_longident  goto 106
	val_longident  goto 51
	constant  goto 52


state 11
	simple_expr : BEGIN . seq_expr END  (82)
	simple_expr : BEGIN . END  (83)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	END  shift 108
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	seq_expr  goto 109
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 12
	constant : CHAR .  (180)

	.  reduce 180


state 13
	constr_longident : FALSE .  (194)

	.  reduce 194


state 14
	constant : FLOAT .  (182)

	.  reduce 182


state 15
	expr : FUN . labeled_simple_pattern fun_def  (41)

	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LABEL  shift 110
	LBRACE  shift 87
	LBRACKET  shift 88
	LIDENT  shift 89
	LPAREN  shift 111
	MINUS  shift 91
	PLUS  shift 92
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	UNDERSCORE  shift 93
	.  error

	val_ident  goto 96
	mod_longident  goto 97
	labeled_simple_pattern  goto 112
	simple_pattern  goto 113
	constr_longident  goto 114
	constant  goto 100
	simple_pattern_not_ident  goto 101
	signed_constant  goto 103


state 16
	expr : FUNCTION . opt_bar match_cases  (40)
	opt_bar : .  (207)

	BAR  shift 115
	CHAR  reduce 207
	EXCEPTION  reduce 207
	FALSE  reduce 207
	FLOAT  reduce 207
	INT  reduce 207
	LBRACE  reduce 207
	LBRACKET  reduce 207
	LIDENT  reduce 207
	LPAREN  reduce 207
	MINUS  reduce 207
	PLUS  reduce 207
	STRING  reduce 207
	TRUE  reduce 207
	UIDENT  reduce 207
	UNDERSCORE  reduce 207

	opt_bar  goto 116


state 17
	expr : IF . seq_expr THEN expr ELSE expr  (46)
	expr : IF . seq_expr THEN expr  (47)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	seq_expr  goto 117
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 18
	constant : INT .  (179)

	.  reduce 179


state 19
	simple_expr : LBRACE . record_expr RBRACE  (90)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LIDENT  shift 118
	LPAREN  shift 104
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	.  error

	val_ident  goto 42
	mod_longident  goto 119
	simple_expr  goto 120
	constr_longident  goto 106
	label_longident  goto 121
	val_longident  goto 51
	constant  goto 52
	record_expr  goto 122
	lbl_expr_list  goto 123
	lbl_expr  goto 124


state 20
	simple_expr : LBRACKET . expr_semi_list opt_semi RBRACKET  (92)
	constr_longident : LBRACKET . RBRACKET  (192)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	RBRACKET  shift 125
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 126
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52
	expr_semi_list  goto 127


state 21
	structure_item : LET . rec_flag let_bindings  (24)
	expr : LET . rec_flag let_bindings_no_attrs IN seq_expr  (39)
	rec_flag : .  (205)

	REC  shift 128
	CHAR  reduce 205
	EXCEPTION  reduce 205
	FALSE  reduce 205
	FLOAT  reduce 205
	INT  reduce 205
	LBRACE  reduce 205
	LBRACKET  reduce 205
	LIDENT  reduce 205
	LPAREN  reduce 205
	MINUS  reduce 205
	PLUS  reduce 205
	STRING  reduce 205
	TRUE  reduce 205
	UIDENT  reduce 205
	UNDERSCORE  reduce 205

	rec_flag  goto 129


state 22
	label : LIDENT .  (178)
	val_ident : LIDENT .  (188)

	AMPERAMPER  reduce 188
	AMPERSAND  reduce 188
	AND  reduce 188
	BANG  reduce 188
	BAR  reduce 188
	BARBAR  reduce 188
	BEGIN  reduce 188
	CHAR  reduce 188
	COLON  reduce 188
	COLONCOLON  reduce 188
	COLONEQUAL  reduce 188
	COLONGREATER  reduce 188
	COMMA  reduce 188
	DOT  reduce 188
	ELSE  reduce 188
	END  reduce 188
	EOF  reduce 188
	EQUAL  reduce 188
	FALSE  reduce 188
	FLOAT  reduce 188
	GREATER  reduce 188
	IN  reduce 188
	INFIXOP0  reduce 188
	INFIXOP1  reduce 188
	INFIXOP2  reduce 188
	INFIXOP3  reduce 188
	INFIXOP4  reduce 188
	INT  reduce 188
	LABEL  reduce 188
	LBRACE  reduce 188
	LBRACKET  reduce 188
	LESS  reduce 188
	LESSMINUS  reduce 178
	LET  reduce 188
	LIDENT  reduce 188
	LPAREN  reduce 188
	MINUS  reduce 188
	MINUSDOT  reduce 188
	MINUSGREATER  reduce 188
	OPEN  reduce 188
	OR  reduce 188
	PERCENT  reduce 188
	PLUS  reduce 188
	PLUSDOT  reduce 188
	PLUSEQ  reduce 188
	PREFIXOP  reduce 188
	RBRACE  reduce 188
	RBRACKET  reduce 188
	RPAREN  reduce 188
	SEMI  reduce 188
	SEMISEMI  reduce 188
	STAR  reduce 188
	STRING  reduce 188
	THEN  reduce 188
	TILDE  reduce 188
	TRUE  reduce 188
	UIDENT  reduce 188
	WITH  reduce 188


state 23
	expr : LPAREN . COLONCOLON RPAREN LPAREN expr COMMA expr RPAREN  (49)
	simple_expr : LPAREN . seq_expr RPAREN  (81)
	simple_expr : LPAREN . seq_expr type_constraint RPAREN  (84)
	constr_longident : LPAREN . RPAREN  (193)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	COLONCOLON  shift 130
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	RPAREN  shift 131
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	seq_expr  goto 132
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 24
	expr : MATCH . seq_expr WITH opt_bar match_cases  (42)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	seq_expr  goto 133
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 25
	subtractive : MINUS .  (211)

	.  reduce 211


state 26
	subtractive : MINUSDOT .  (212)

	.  reduce 212


state 27
	open_statement : OPEN . mod_longident  (31)

	UIDENT  shift 35
	.  error

	mod_longident  goto 134


state 28
	additive : PLUS .  (213)

	.  reduce 213


state 29
	additive : PLUSDOT .  (214)

	.  reduce 214


state 30
	simple_expr : PREFIXOP . simple_expr  (94)

	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LIDENT  shift 89
	LPAREN  shift 104
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	UIDENT  shift 35
	.  error

	val_ident  goto 42
	mod_longident  goto 43
	simple_expr  goto 135
	constr_longident  goto 106
	val_longident  goto 51
	constant  goto 52


state 31
	structure_tail : SEMISEMI . structure  (22)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 21
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	OPEN  shift 27
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	SEMISEMI  shift 31
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	EOF  reduce 21

	structure  goto 136
	seq_expr  goto 38
	structure_item  goto 39
	structure_tail  goto 40
	open_statement  goto 41
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 32
	constant : STRING .  (181)

	.  reduce 181


state 33
	constr_longident : TRUE .  (195)

	.  reduce 195


state 34
	expr : TRY . seq_expr WITH opt_bar match_cases  (43)

	ASSERT  shift 9
	BANG  shift 10
	BEGIN  shift 11
	CHAR  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LET  shift 83
	LIDENT  shift 22
	LPAREN  shift 23
	MATCH  shift 24
	MINUS  shift 25
	MINUSDOT  shift 26
	PLUS  shift 28
	PLUSDOT  shift 29
	PREFIXOP  shift 30
	STRING  shift 32
	TRUE  shift 33
	TRY  shift 34
	UIDENT  shift 35
	.  error

	seq_expr  goto 137
	val_ident  goto 42
	mod_longident  goto 43
	expr  goto 44
	simple_expr  goto 45
	expr_comma_list  goto 46
	constr_longident  goto 47
	subtractive  goto 48
	additive  goto 49
	label  goto 50
	val_longident  goto 51
	constant  goto 52


state 35
	mod_longident : UIDENT .  (200)

	.  reduce 200


state 36
	%entry% : '\001' implementation .  (215)

	.  reduce 215


state 37
	implementation : structure . EOF  (1)

	EOF  shift 138
	.  error


state 38
	structure : seq_expr . structure_tail  (19)
	structure_tail : .  (21)

	LET  shift 139
	OPEN  shift 27
	SEMISEMI  shift 31
	EOF  reduce 21

	structure_item  goto 39
	structure_tail  goto 140
	open_statement  goto 41


state 39
	structure_tail : structure_item . structure_tail  (23)
	structure_tail : .  (21)

	LET  shift 139
	OPEN  shift 27
	SEMISEMI  shift 31
	EOF  reduce 21

	structure_item  goto 39
	structure_tail  goto 141
	open_statement  goto 41


state 40
	structure : structure_tail .  (20)

	.  reduce 20


state 41
	structure_item : open_statement .  (25)

	.  reduce 25


state 42
	val_longident : val_ident .  (189)

	.  reduce 189


state 43
	simple_expr : mod_longident . DOT LPAREN seq_expr RPAREN  (86)
	simple_expr : mod_longident . DOT LBRACE record_expr RBRACE  (91)
	simple_expr : mod_longident . DOT LBRACKET expr_semi_list opt_semi RBRACKET  (93)
	val_longident : mod_longident . DOT val_ident  (190)
	constr_longident : mod_longident .  (191)
	mod_longident : mod_longident . DOT UIDENT  (201)
